# train-schedule

./: CMakeLists.txt  CMakePresets.json  Description.md  README.md  schedule.json
src/: CommandListener.cpp  CommandListener.h  main.cpp
src/controllers/: JsonParser.h  JsonWriter.h  Printer.h  ScheduleController.h  TrainBuilder.h
src/models/: Schedule.h  Station.h  TimePoint.h  Train.h
tests/: schedule_test.cpp  train_test.cpp
